--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="HealYourPa.in" startnode="81" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="CE210ACC-0486-4226-8F64-82BB19326DCA" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">.red-text {
+	<tw-storydata name="HealYourPa.in" startnode="81" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="CE210ACC-0486-4226-8F64-82BB19326DCA" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">.red-text {
   font-size: 24px;
   color: red;
 }
@@ -370,7 +370,7 @@ Is understanding what is causing the pain more important to you, or doing the so
 
 [[Understanding the cause of the pain is more important]]
 
-[[Doing the solution is more important-&gt;I am willing to do the solution without understanding the cause]]
+[[Doing the solution to become pain-free is more important-&gt;I am willing to do the solution without understanding the cause]]
 
 
 </tw-passagedata><tw-passagedata pid="18" name="What I have tried is not listed" tags="" position="1050,575" size="100,100">I&#39;m sorry I didn&#39;t list something you have tried.
@@ -1417,9 +1417,18 @@ Author of &quot;The Straw That Broke the Camel&#39;s Back&quot;
 
 [[Book Dedication]]</tw-passagedata><tw-passagedata pid="70" name="No, this does not make sense to me" tags="" position="1175,700" size="100,100">Let&#39;s consider a straightforward example. 
 
-Suppose someone states, &quot;I feel hurt.&quot; 
+Suppose someone states, &quot;I am hurt.&quot; 
 
-This phrase is ambiguous because it can refer to both physical and emotional pain. Understanding the context is crucial to discerning the type of pain being communicated. English contains many such ambiguous expressions, and I&#39;ll provide more examples later. This should illustrate how common speech often uses words with multiple meanings, particularly regarding pain, suggesting a potential overlap in the brain regions involved.
+Someone could be physically hurt or emotionally hurt but we use the same phrase. This phrase is ambiguous and understanding the context is crucial to discerning the type of pain being communicated.  English contains many such ambiguous expressions. Here are a few more examples:
+&lt;ul&gt;
+  &lt;li&gt;He is a pain in the back.&lt;/li&gt;
+  &lt;li&gt;That person is a pain in the neck.&lt;/li&gt;
+  &lt;li&gt;That felt like a kick in the teeth.&lt;/li&gt;
+  &lt;li&gt;She stabbed me in the back.&lt;/li&gt;
+&lt;/ul&gt;
+These phrases illustrate how common speech often uses words with ambiguous meanings, particularly regarding pain, suggesting a potential overlap in the brain regions involved. 
+
+How do you feel about the original question now?
 
 [[Yes I can see how emotional and physical pain may overlap]] 
 
@@ -1637,7 +1646,10 @@ Old Cover
 
 
 
-</tw-passagedata><tw-passagedata pid="75" name="Begin" tags="" position="325,150" size="100,100">INTRODUCTION
+	I had previously been confused about having to change my personality traits, and your program reassured me that I don&#39;t have to do that.  The best thing about your program for me is the emotion meditation. It 100% keeps me out of story telling mode, so this is the first time I&#39;ve actually grasped how to feel emotions without thinking about them. 		That is absolutely amazing.  I mentioned skin issues and to be honest, that has not improved yet, but I will keep going with the program...I understand it takes time.   I think I mentioned to you I had back pain and sciatica years ago, but I didn&#39;t mention that the sciatica comes back when I&#39;m stressed or go kayaking (it lasts for a few days and then moves on so not a big deal).  
+    	
+    	
+        I went kayaking last week for the first time with NO sciatica afterwards.  I was so surprised that I went a second time and again, no sciatica.  My husband and I also had an argument last week, and that usually causes me tension afterwards, but I was fine.   So I&#39;m seeing results and will definitely continue with the daily journaling and emotional meditation.  Your program is excellent!</tw-passagedata><tw-passagedata pid="75" name="Begin" tags="" position="325,150" size="100,100">INTRODUCTION
 
 This is an //intentional// book. It&#39;s probably different than any self healing book that you have read. The focus of the book is to guide you to take the actions needed to heal yourself. Thousands have healed themselves with just this //basic information// and you can too. The book offers a natural and safe self-healing approach for chronic pain, requiring nothing more than YOU.
 
@@ -1788,15 +1800,15 @@ I’m completely rattled by what happened.
 [[Feedback]]</tw-passagedata><tw-passagedata pid="78" name="Feedback" tags="" position="400,775" size="100,100">[[Yes I have read the whole book and I&#39;m ready to give my feedback]]
 
 [[No I have not read the whole book but I&#39;m ready to give my feedback anyway|Yes I have read the whole book and I&#39;m ready to give my feedback]]
-</tw-passagedata><tw-passagedata pid="79" name="Yes I have read the whole book and I&#39;m ready to give my feedback" tags="" position="225,925" size="100,100">&lt;iframe src=&quot;https://docs.google.com/forms/d/e/1FAIpQLSfGyrPrs188ErKnf8R6J2thM7mQhvJbaB6eMdbypKnjLRGr8w/viewform?embedded=true&quot; width=&quot;640&quot; height=&quot;1237&quot; frameborder=&quot;0&quot; marginheight=&quot;0&quot; marginwidth=&quot;0&quot;&gt;Loading…&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="80" name="Testimonials" tags="" position="500,125" size="100,100">	I had previously been confused about having to change my personality traits, and your program reassured me that I don&#39;t have to do that.  The best thing about your program for me is the emotion meditation. It 100% keeps me out of story telling mode, so this is the first time I&#39;ve actually grasped how to feel emotions without thinking about them. 		That is absolutely amazing.  I mentioned skin issues and to be honest, that has not improved yet, but I will keep going with the program...I understand it takes time.   I think I mentioned to you I had back pain and sciatica years ago, but I didn&#39;t mention that the sciatica comes back when I&#39;m stressed or go kayaking (it lasts for a few days and then moves on so not a big deal).  
-    	I went kayaking last week for the first time with NO sciatica afterwards.  I was so surprised that I went a second time and again, no sciatica.  My husband and I also had an argument last week, and that usually causes me tension afterwards, but I was fine.   So I&#39;m seeing results and will definitely continue with the daily journaling and emotional meditation.  Your program is excellent!
+</tw-passagedata><tw-passagedata pid="79" name="Yes I have read the whole book and I&#39;m ready to give my feedback" tags="" position="225,925" size="100,100">&lt;iframe src=&quot;https://docs.google.com/forms/d/e/1FAIpQLSfGyrPrs188ErKnf8R6J2thM7mQhvJbaB6eMdbypKnjLRGr8w/viewform?embedded=true&quot; width=&quot;640&quot; height=&quot;1237&quot; frameborder=&quot;0&quot; marginheight=&quot;0&quot; marginwidth=&quot;0&quot;&gt;Loading…&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="80" name="Testimonials" tags="" position="500,100" size="100,100">       The best thing about your program for me is the emotion meditation. It 100% keeps me out of story telling mode, so this is the first time I&#39;ve actually grasped how to feel emotions without thinking about them. 		
+        I went kayaking last week for the first time with NO sciatica afterwards.  I was so surprised that I went a second time and again, no sciatica.  My husband and I also had an argument last week, and that usually causes me tension afterwards, but I was fine.   So I&#39;m seeing results and will definitely continue with the daily journaling and emotional meditation.  Your program is excellent!
 
 -M.L.</tw-passagedata><tw-passagedata pid="81" name="Cover" tags="" position="225,25" size="100,100">&lt;div style=&quot;position: relative; text-align: center; display: inline-block;&quot;&gt;
     &lt;!-- Image --&gt;
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;Begin&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
