--- a/index.html
+++ b/index.html
@@ -1005,6 +1005,7 @@ Ok, so finally, here are the main steps to getting pain free:
   &lt;li&gt;Journal for 15 minutes on these stressors&lt;/li&gt;
   &lt;li&gt;Perform an emotional meditation for at least 15 minutes that activates the limbic system and releases unprocessed emotions so you  can become pain-free&lt;/li&gt;
   &lt;li&gt;Repeat this daily for 30 days&lt;/li&gt;
+  &lt;li&gt;Remind yourself that emotions are just emotions and that you are safe&lt;/li&gt;
 &lt;/ol&gt;
 You might be wondering if I&#39;m kidding. I&#39;m not. Getting pain free is as simple as what I have written above. I hope that by reading the book until this point, you are primed with the knowledge that the steps above will lead to you healing yourself and staying pain free.
 
@@ -1342,6 +1343,7 @@ Let the emotion come up on it&#39;s own. Allow it.
 
 
 Write down the emotion that you spoke out loud on a paper while feeling it.
+Remind yourself you are safe to feel this emotion because it is just an emotion.
 
 [[Now acknowledge yourself]]</tw-passagedata><tw-passagedata pid="66" name="Now acknowledge yourself" tags="" position="400,1700" size="100,100">Now acknowledge yourself and speak out loud:
 
@@ -1808,7 +1810,7 @@ I’m completely rattled by what happened.
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;Begin&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
