--- a/index.html
+++ b/index.html
@@ -1428,7 +1428,7 @@ Someone could be physically hurt or emotionally hurt but we use the same phrase.
   &lt;li&gt;That felt like a kick in the teeth.&lt;/li&gt;
   &lt;li&gt;She stabbed me in the back.&lt;/li&gt;
 &lt;/ul&gt;
-These phrases illustrate how common speech often uses words with ambiguous meanings, particularly regarding pain, suggesting a potential overlap in the brain regions involved. 
+These phrases illustrate how common speech often uses words with ambiguous meanings, particularly regarding pain, suggesting a potential overlap in the brain regions involved. You can see a full list of phrases [[here.-&gt;More mind body phrases]]   
 
 How do you feel about the original question now?
 
@@ -1623,6 +1623,11 @@ Chinese trap analogy
 
 Truman show is like vanilla life - just perfect
 
+Story of two men fighting - we need to get to the point of emotions, someone asked if it affects those not in pain and the answer is a definite yes.
+
+Imagine axing a tree, how would you do it to release maximum emotions
+
+
 Old Cover
 
 &lt;pre&gt;
@@ -1662,7 +1667,9 @@ It can also be used to save or load your reading position.
 
 On a mobile device, the sidebar might need to be expanded using the arrow on the top left.
 
-Like learning to ride a bicycle, you cannot just read about how to ride, but you must get on the bicicyle several times to be able to learn to ride it. So plan to set aside a couple of hours to fully engage in the experiences described in this book and then time for a daily practice to master the techniques.
+Like learning to ride a bicycle 🚴‍🚴‍♀️🚴‍♂️, you cannot just read about how to ride, but you must get on the bicicyle several times to be able to learn to ride it. The same for learning how to swim 🏊‍♂️🏊‍♀️🏊‍♂️. You must splash around and try things for quite a bit before you can learn how to swim, no matter how much you read about it.
+
+So plan to set aside a couple of hours to fully engage in the experiences described in this book and then time for a daily practice to master the techniques.
 
 [[Feedback]] from you is invaluable, and this book is continually refined based on your insights and updates&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;Book Dedication&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
 
@@ -1797,8 +1804,7 @@ We got off on the wrong foot
 He’s having cold feet
 I feel shaken up by what I saw.
 I’m completely rattled by what happened.
-
-[[Go back|Book Dedication]] </tw-passagedata><tw-passagedata pid="77" name="StoryMenu" tags="" position="225,800" size="100,100">[[Testimonials]] 
+</tw-passagedata><tw-passagedata pid="77" name="StoryMenu" tags="" position="225,800" size="100,100">[[Testimonials]] 
 [[Feedback]]</tw-passagedata><tw-passagedata pid="78" name="Feedback" tags="" position="400,775" size="100,100">[[Yes I have read the whole book and I&#39;m ready to give my feedback]]
 
 [[No I have not read the whole book but I&#39;m ready to give my feedback anyway|Yes I have read the whole book and I&#39;m ready to give my feedback]]
@@ -1810,7 +1816,7 @@ I’m completely rattled by what happened.
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;Begin&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
