--- a/index.html
+++ b/index.html
@@ -980,7 +980,11 @@ What&#39;s even more important is that feelings don&#39;t have to make sense, in
 
 
 
-</tw-passagedata><tw-passagedata pid="48" name="No, the thinking and feeling part is not clear to me" tags="" position="400,1325" size="100,100">In real life we have one brain and we are doing a combination of feeling and thinking. Some activities involve more thinking and some activities involve experiencing feelings. Would you be willing to imagine that you have a feeling brain and a thinking brain?
+</tw-passagedata><tw-passagedata pid="48" name="No, the thinking and feeling part is not clear to me" tags="" position="400,1325" size="100,100">When you go to university, one of the biggest career choices you’ll make is whether to pursue the Arts or the Sciences. Engaging in art—whether through painting, music, or literature—isn’t just about logic; it’s about experiencing emotions, memories, intuition, and self-expression. In contrast, sciences require higher-order thinking like logic, analysis, and reasoning, focusing on evidence and patterns to understand the world objectively, leaning on critical thinking over emotion.
+
+In reality, both fields need a blend of both to truly excel. Some activities lean more on thought, while others draw more on emotion and intuition.
+
+So, you see, one of life’s biggest choices—our career—is deeply connected to both thinking and feeling. Can you imagine having both a ‘feeling brain’ and a ‘thinking brain’?
 
 [[Yes, I can imagine that I have a feeling brain and a thinking brain-&gt;Yes I can understand the difference between the thinking brain and feeling brain]]
 
@@ -1804,6 +1808,8 @@ We got off on the wrong foot
 He’s having cold feet
 I feel shaken up by what I saw.
 I’m completely rattled by what happened.
+
+Please use the back button in the top left toolbar to return to your previous page.
 </tw-passagedata><tw-passagedata pid="77" name="StoryMenu" tags="" position="225,800" size="100,100">[[Testimonials]] 
 [[Feedback]]</tw-passagedata><tw-passagedata pid="78" name="Feedback" tags="" position="400,775" size="100,100">[[Yes I have read the whole book and I&#39;m ready to give my feedback]]
 
@@ -1816,7 +1822,7 @@ I’m completely rattled by what happened.
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;Begin&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
