--- a/index.html
+++ b/index.html
@@ -321,7 +321,9 @@ If you wish to return to the previous page, press the back button on the sidebar
 
 [[I am skeptical-&gt;I am skeptical that stress and tension can cause this pain]]
 
-[[I don&#39;t believe stress and tension causes this pain]]</tw-passagedata><tw-passagedata pid="12" name="I am convinced my pain originates from stress and tension" tags="" position="1075,225" size="100,100">It is good that you are convinced that your pain originates from stress and tension.
+[[I don&#39;t believe stress and tension causes this pain]]
+
+</tw-passagedata><tw-passagedata pid="12" name="I am convinced my pain originates from stress and tension" tags="" position="1075,225" size="100,100">It is good that you are convinced that your pain originates from stress and tension.
 However, given that you reading this book, it means you still have some work to do to lock in this information.
 
 [[Let&#39;s continue-&gt;Have you tried any of these?]]
@@ -1281,7 +1283,7 @@ During the meditation remember the following
   &lt;li&gt;Write down your current pain level on a scale of 1-10 before you start.&lt;/li&gt;
 &lt;/ul&gt;
 
-[[Let&#39;s create this into screen by screen easy to follow steps]]
+[[Here is a visualization of the process-&gt;Visualization]] 
 </tw-passagedata><tw-passagedata pid="63" name="Let&#39;s create this into screen by screen easy to follow steps" tags="" position="900,1600" size="100,100">First step
 
 Say out LOUD:
@@ -1571,6 +1573,8 @@ I’m not the only one.</tw-passagedata><tw-passagedata pid="74" name="Notes" ta
 Short URL to the google feedback form
 https://forms.gle/so4Jc68AvtktU9Zr9
 
+Like a string of emotions...follow the string...
+
 Tune into feelings like raindrops, after a while we get used to them and we need to be able to sense them again.
 
 You become what you think, but you become the opposite of what you feel
@@ -1822,7 +1826,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v1.0&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1858,6 +1862,17 @@ Please use the back button in the top left toolbar to return to your previous pa
         height: auto;
     }
 &lt;/style&gt;
+</tw-passagedata><tw-passagedata pid="82" name="Visualization" tags="" position="975,1750" size="100,100">Here is a visualization of the process. Imagine that the emotions are on a rope and you are pulling the rope. You can only feel the emotion that your hands are touching on the rope. So you label this emotion, and then you pull the rope, and then your hands feel the next emotion, and you label that one, and so on.
+
+There is no rule to this. The same emotion may come up. A new one may come up. A previous emotion that had come up may return. Just trust the rope is presenting you with what you are feeling right now, and keep labeling. Trust the rope. It will get you to safety if you just allow this process.
+
+
+&lt;div style=&quot;position: relative; text-align: center; display: inline-block;&quot;&gt;
+    &lt;!-- Image --&gt;
+    &lt;img src=&quot;emotional-rope.jpg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
+&lt;/div&gt;
+
+[[Let&#39;s create this into screen by screen easy to follow steps]]
 </tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
