--- a/index.html
+++ b/index.html
@@ -1826,7 +1826,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v1.0&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v1.1&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1864,9 +1864,7 @@ Please use the back button in the top left toolbar to return to your previous pa
 &lt;/style&gt;
 </tw-passagedata><tw-passagedata pid="82" name="Visualization" tags="" position="975,1750" size="100,100">Here is a visualization of the process. Imagine that the emotions are on a rope and you are pulling the rope. You can only feel the emotion that your hands are touching on the rope. So you label this emotion, and then you pull the rope, and then your hands feel the next emotion, and you label that one, and so on.
 
-There is no rule to this. The same emotion may come up. A new one may come up. A previous emotion that had come up may return. Just trust the rope is presenting you with what you are feeling right now, and keep labeling. Trust the rope. It will get you to safety if you just allow this process.
-
-
+There is no rule to this. The same emotion may come up. A new one may come up. A previous emotion that had come up may return. Just trust the rope is presenting you with what you are feeling right now, and keep labeling. Trust the rope. It will get you to safety if you just allow this process. Remember NOT to filter out anger and rage.
 &lt;div style=&quot;position: relative; text-align: center; display: inline-block;&quot;&gt;
     &lt;!-- Image --&gt;
     &lt;img src=&quot;emotional-rope.jpg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
