--- a/index.html
+++ b/index.html
@@ -1816,19 +1816,19 @@ I’m completely rattled by what happened.
 Please use the back button in the top left toolbar to return to your previous page.
 </tw-passagedata><tw-passagedata pid="77" name="StoryMenu" tags="" position="225,800" size="100,100">[[Testimonials]] 
 [[Feedback]]
-[[ContactMe]]
-[[Emotional Meditation-&gt;Let&#39;s create this into screen by screen easy to follow steps]]</tw-passagedata><tw-passagedata pid="78" name="Feedback" tags="" position="400,775" size="100,100">[[Yes I have read the whole book and I&#39;m ready to give my feedback]]
+[[Contact Me]]
+[[Emotional Meditation-&gt;Tell me about the emotional meditation]]</tw-passagedata><tw-passagedata pid="78" name="Feedback" tags="" position="400,775" size="100,100">[[Yes I have read the whole book and I&#39;m ready to give my feedback]]
 
 [[No I have not read the whole book but I&#39;m ready to give my feedback anyway|Yes I have read the whole book and I&#39;m ready to give my feedback]]
 </tw-passagedata><tw-passagedata pid="79" name="Yes I have read the whole book and I&#39;m ready to give my feedback" tags="" position="225,925" size="100,100">&lt;iframe src=&quot;https://docs.google.com/forms/d/e/1FAIpQLSfGyrPrs188ErKnf8R6J2thM7mQhvJbaB6eMdbypKnjLRGr8w/viewform?embedded=true&quot; width=&quot;640&quot; height=&quot;1237&quot; frameborder=&quot;0&quot; marginheight=&quot;0&quot; marginwidth=&quot;0&quot;&gt;Loading…&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="80" name="Testimonials" tags="" position="500,75" size="100,100">       The best thing about your program for me is the emotion meditation. It 100% keeps me out of story telling mode, so this is the first time I&#39;ve actually grasped how to feel emotions without thinking about them. 		
         I went kayaking last week for the first time with NO sciatica afterwards.  I was so surprised that I went a second time and again, no sciatica.  My husband and I also had an argument last week, and that usually causes me tension afterwards, but I was fine.   So I&#39;m seeing results and will definitely continue with the daily journaling and emotional meditation.  Your program is excellent!
 
--M.L.</tw-passagedata><tw-passagedata pid="81" name="Cover" tags="" position="200,25" size="100,100">&lt;div style=&quot;position: relative; text-align: center; display: inline-block;&quot;&gt;
+-M.L.</tw-passagedata><tw-passagedata pid="81" name="Cover" tags="" position="150,25" size="100,100">&lt;div style=&quot;position: relative; text-align: center; display: inline-block;&quot;&gt;
     &lt;!-- Image --&gt;
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v1.2&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v1.3&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1873,7 +1873,7 @@ There is no rule to this. The same emotion may come up. A new one may come up. A
 &lt;/div&gt;
 
 [[Let&#39;s create this into screen by screen easy to follow steps]]
-</tw-passagedata><tw-passagedata pid="83" name="ContactMe" tags="" position="75,875" size="100,100">You can contact me via the feedback form.
+</tw-passagedata><tw-passagedata pid="83" name="Contact Me" tags="" position="75,875" size="100,100">You can contact me via the feedback form.
 You can leave comments and your email address and I will reply to you directly.</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
