--- a/index.html
+++ b/index.html
@@ -1828,7 +1828,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v1.3&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v1.4&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1873,7 +1873,7 @@ There is no rule to this. The same emotion may come up. A new one may come up. A
 &lt;/div&gt;
 
 [[Let&#39;s create this into screen by screen easy to follow steps]]
-</tw-passagedata><tw-passagedata pid="83" name="Contact Me" tags="" position="75,875" size="100,100">You can contact me via the feedback form.
+</tw-passagedata><tw-passagedata pid="83" name="Contact Me" tags="" position="50,750" size="100,100">You can contact me via the [[feedback form-&gt;Feedback]].
 You can leave comments and your email address and I will reply to you directly.</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
