--- a/index.html
+++ b/index.html
@@ -104,7 +104,14 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="HealYourPa.in" startnode="81" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="CE210ACC-0486-4226-8F64-82BB19326DCA" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">.red-text {
+	<tw-storydata name="HealYourPa.in" startnode="81" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="CE210ACC-0486-4226-8F64-82BB19326DCA" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"><style>
+  .responsive-video {
+    width: 100%;
+    height: auto;
+  }
+</style>
+
+.red-text {
   font-size: 24px;
   color: red;
 }
@@ -1833,7 +1840,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v1.5&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v1.6&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1879,27 +1886,18 @@ There is no rule to this. The same emotion may come up. A new one may come up. A
 
 [[Let&#39;s create this into screen by screen easy to follow steps]]
 </tw-passagedata><tw-passagedata pid="83" name="Contact Me" tags="" position="50,750" size="100,100">You can contact me via the [[feedback form-&gt;Feedback]].
-You can leave comments and your email address and I will reply to you directly.</tw-passagedata><tw-passagedata pid="84" name="SheldonTinman" tags="" position="200,150" size="100,100">Wait!
+You can leave comments and your email address and I will reply to you directly.</tw-passagedata><tw-passagedata pid="84" name="SheldonTinman" tags="" position="200,150" size="100,100">WAIT!
 
 Before we begin, are you sure you want to read this book? 
+The consequence of reading this book will help you become pain free but you may have a different experience of life after this. Watch this video and decide if you really want to continue?
 
-The consequence of reading this book will help you become pain free but you may become a different person.
-
-Watch this video and decide if you really want to continue?
-
-&lt;style&gt;
-  .responsive-video {
-    width: 100%;
-    height: auto;
-  }
-&lt;/style&gt;
 
 &lt;video class=&quot;responsive-video&quot; controls&gt;
   &lt;source src=&quot;S9E4TinManHeart-H264.mp4&quot; type=&quot;video/mp4&quot;&gt;
   Your browser does not support the video tag.
 &lt;/video&gt;
 
-[[Let&#39;s begin your self healing journey.-&gt;Are you suffering from chronic pain]]
+[[YES I really want to get better!-&gt;Are you suffering from chronic pain]]
 </tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
