--- a/index.html
+++ b/index.html
@@ -104,12 +104,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="HealYourPa.in" startnode="81" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="CE210ACC-0486-4226-8F64-82BB19326DCA" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"><style>
-  .responsive-video {
-    width: 100%;
-    height: auto;
-  }
-</style>
+	<tw-storydata name="HealYourPa.in" startnode="81" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="CE210ACC-0486-4226-8F64-82BB19326DCA" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
 
 .red-text {
   font-size: 24px;
@@ -1840,7 +1835,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v1.6&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v1.7&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1890,8 +1885,12 @@ You can leave comments and your email address and I will reply to you directly.<
 
 Before we begin, are you sure you want to read this book? 
 The consequence of reading this book will help you become pain free but you may have a different experience of life after this. Watch this video and decide if you really want to continue?
-
-
+&lt;style&gt;
+  .responsive-video {
+    width: 100%;
+    height: auto;
+  }
+&lt;/style&gt;
 &lt;video class=&quot;responsive-video&quot; controls&gt;
   &lt;source src=&quot;S9E4TinManHeart-H264.mp4&quot; type=&quot;video/mp4&quot;&gt;
   Your browser does not support the video tag.
