--- a/index.html
+++ b/index.html
@@ -1835,7 +1835,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v1.7&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v1.8&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1881,10 +1881,8 @@ There is no rule to this. The same emotion may come up. A new one may come up. A
 
 [[Let&#39;s create this into screen by screen easy to follow steps]]
 </tw-passagedata><tw-passagedata pid="83" name="Contact Me" tags="" position="125,750" size="100,100">You can contact me via the [[feedback form-&gt;Feedback]].
-You can leave comments and your email address and I will reply to you directly.</tw-passagedata><tw-passagedata pid="84" name="SheldonTinman" tags="" position="350,150" size="100,100">WAIT!
-
-Before we begin, are you sure you want to read this book? 
-The consequence of reading this book will help you become pain free but you may have a different experience of life after this. Watch this video and decide if you really want to continue?
+You can leave comments and your email address and I will reply to you directly.</tw-passagedata><tw-passagedata pid="84" name="SheldonTinman" tags="" position="350,150" size="100,100">Before we begin, are you sure you want to read this book? 
+The consequence of reading this book will help you become pain free but you may have a different experience of life after this. Watch this clip from the series &quot;The Big Bang Theory&quot; and decide if you really want to continue?
 &lt;style&gt;
   .responsive-video {
     width: 100%;
