--- a/index.html
+++ b/index.html
@@ -1670,7 +1670,7 @@ Old Cover
 	I had previously been confused about having to change my personality traits, and your program reassured me that I don&#39;t have to do that.  The best thing about your program for me is the emotion meditation. It 100% keeps me out of story telling mode, so this is the first time I&#39;ve actually grasped how to feel emotions without thinking about them. 		That is absolutely amazing.  I mentioned skin issues and to be honest, that has not improved yet, but I will keep going with the program...I understand it takes time.   I think I mentioned to you I had back pain and sciatica years ago, but I didn&#39;t mention that the sciatica comes back when I&#39;m stressed or go kayaking (it lasts for a few days and then moves on so not a big deal).  
     	
     	
-        I went kayaking last week for the first time with NO sciatica afterwards.  I was so surprised that I went a second time and again, no sciatica.  My husband and I also had an argument last week, and that usually causes me tension afterwards, but I was fine.   So I&#39;m seeing results and will definitely continue with the daily journaling and emotional meditation.  Your program is excellent!</tw-passagedata><tw-passagedata pid="75" name="Begin" tags="" position="525,75" size="100,100">INTRODUCTION
+        I went kayaking last week for the first time with NO sciatica afterwards.  I was so surprised that I went a second time and again, no sciatica.  My husband and I also had an argument last week, and that usually causes me tension afterwards, but I was fine.   So I&#39;m seeing results and will definitely continue with the daily journaling and emotional meditation.  Your program is excellent!</tw-passagedata><tw-passagedata pid="75" name="Begin" tags="" position="525,75" size="100,100">&lt;h1&gt;INTRODUCTION&lt;/h1&gt;
 
 This is an //intentional// book. It&#39;s probably different than any self healing book that you have read. The focus of the book is to guide you to take the actions needed to heal yourself. Thousands have healed themselves with just this //basic information// and you can too. The book offers a natural and safe self-healing approach for chronic pain, requiring nothing more than YOU.
 
@@ -1835,7 +1835,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v1.8&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v1.9&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
